2.0/utfgrid.md
# UTFGrid

The UTFGrid encoding scheme encodes interactivity data for a tile in a space efficient manner. It is designed to be used in browsers, e.g. for displaying tooltips when hovering over certain features of a map tile.

Since slower browsers and machines can't cope with rendering the actual polygons used to draw vectors on the map tile, we use a grid-based approach where we store the associated information for each pixel.

UTFGrid uses JSON as a container format. It is exclusively geared towards square 256x256 pixel tiles.

In UTFGrid 2.0, multiple grids can be combined by a server into a single JSON payload: this means that 2.0 is not backwards-compatible with 1.0. Grid keys, formatters, data, and legends are all now arrays instead of single objects.

## Grid

To achieve reasonable speed in browsers, we store information for a pixel in long strings, where each character's Unicode code point is the key for retrieving the information associated with that pixel. When we have less than 96 unique IDs, this means that the space taken up by storing each pixel separately is 256 * 256 = 64 KB. Gzipping the grid data typically reduces it to a size below 2K.

By default, UTFGrid operates on a 2x2 grid. This means that the maximum information resolution for a 256x256 tile is 128x128. If each pixel had different information, we require a 14 bit wide ID (2^14 = 16384). However, most tiles won't have that many IDs; they'll typically have a couple of dozens IDs. Therefore, we take advantage of UTF-8's variable length codepoint encoding: all ASCII characters are encoded as is, that means that the first 94 codepoints are encoded with their code number as a single byte (codes `0x20`, `0x21`, `0x23`-`0x5B` and `0x5D`-`0x7F`). IDs with a number larger than that will get encoded as multiple bytes.

UTFGrid 2.0 allows multiple layers of interactivity within the same tileset, but does not change the actual grid member of interactivity: grids are encoded as before, but the ids they encode can encompass multiple key arrays.

## Encoding IDs

[JSON](http://www.ietf.org/rfc/rfc4627) doesn't allow control characters, `"` and `\` to be encoded as their literal UTF-8 representation. **Encoding** an ID works as follows:

* Add 32<sub>10</sub>.
* If the result is >= 34<sub>10</sub>, add 1.
* If the result is >= 92<sub>10</sub>, add 1.

This ensures that all characters that cannot be represented natively are skipped.

**Decoding** works as follows:

* If the codepoint is >= 93<sub>10</sub>, subtract 1.
* If the codepoint is >= 35<sub>10</sub>, subtract 1.
* Subtract 32<sub>10</sub>.

## Mapping an ID to a key

The UTFgrid file contains an array in a property named `grid` at the root level. Each entry represents a row in the grid. Each array entry is a string that contains the UTF-8 encoded codepoint for each column. The string length corresponds to the number of entries in the `grid` array. Only powers of two are allowed.

As of UTFGrid 2.0, this single `grid` array can represent the combination of multiple 'layers' combined into one JSON payload. Thus the previous structure of the rest of the grid changes to support multiple formatters, data schemas, and legends.

The keys are stored in an array of arrays named `keys` at the root level. The index of each key represents the ID that it is associated to.

Retrieving a key from a coordinate works as follows (`json` is the root level object, `x` and `y` are the coordinates, starting from top left at 0, and `size` is the number of entries in the `grid` key):

* `var factor = 256 / size, row = y / factor, col = x / factor`
* `var id = json.grid[row].charCodeAt(col);` is the character that contains the encoded ID.
* Decode the `id` as described in *"Encoding IDs"*.
* Determine the correct keys layer - `layer` by finding the array in keys where `id < json.keys[0..layer].length` and `id >= json.keys[0..layer - 1].length`.
* `var key = json.keys[layer][id];` retrieves the ID associated with the coordinate.

All divisions are integer divisions.

## Mapping a key to data

The JSON file may contain an optional `data` property at the root level. If it isn't present, the client looks up the obtained key in its internal data store. If the lookup key is not present, it queries the server with the missing keys. If the `data` property is present, but the key cannot be found, the client must behave as if there were no `data` property.

An empty key signifies the unavailability of information for that pixel. No action may be taken to retrieve data for an empty (`""`) key.


## Example UTFGrid JSON file

    { "grid":
      [
        "                                     !!!!!!!########################$$$$$$$$$$$$$$$$%%%%%%%%%%      %%%%%%%%%%%%%%%%    %      %",
        "                                      !!!!!!########################$$$$$$$$$$$$$$$$$%%%%%%%%%%%      %%%%%%%%%%%%%     %%%%  %%",
        "                                       !!!!!########################$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%         %%%%%%%     %%%%%% %%",
        "                                     !!!!!###########################$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%         %%%       %%%%%%%%%%",
        "                                      !!!!###########################$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%                 %%%%%%%%%%%%",
        "                                    !!!!!!######################  ###$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%                %%%%%%%%%%%%",
        "                                  !  !!!!!######################       $$$$$$$$$$$$$$%%%%%%%%%%%%%%               %%%%%%%%%%%%%%",
        "                                   !!!!!!!#####################         $$$$$$$$$$$$$%%%%%%%%%%%%%%              %%%%%%%%%%%%%%%",
        "                                   !!!!!!!####################           $$$$$$$$$$$$%%%%%%%%%%%%%                %%%%%%%%%%%%%%",
        "                                    !!!!!#####################          $$$$$$$$$$$$$%%%%%%%%%%%%%%               %%%%%%%%%%%%%%",
        "                                 !  !!!!!#####################           $$$$$$$$$$$$%%%%%%%%%%%%%%   %  %%%       %%%%%%%%%%%%%",
        "                               ! !!!!!!!#####################           $$$$$$$$$$$$$%%%%%%%%%%%%%%%    %%%%       %%%%%%%%%%%%%",
        "                                  !!!!!!#####################         $$$$$$$$$$$$$$$$%%%%%%%%%%%%%%    %%%%% %     %%%%%%%%%%%%",
        "                                 !!!!!!######################         $$$$$$$$$$$$$$$$%%%%%%%%%%%%%%     %%%%%%%   %%%%%%%%%%%%%",
        "                               ! !!!!!!!!#####################       $$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%      %%%%%%%%%%%%%%%%%%%%%%",
        "                              !!!!!!!!!!!####################        $$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%      %%%%%%%%%%%%%%%%%%%%",
        "                             !!!!!!!!!!!!###################        $$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%     %%%%%%%%%%%%%%%%%%%",
        "                             !!! !!!!#######################       $$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%     %%%%%%%%%%%%%%%%%%%",
        "                            !!!! !!!########################     $$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%",
        "                         !   !! !!!!#######################       $$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        !!!! !  !!!######################       $$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                       ! ! !!!!!!!!####################         $$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                       !!!!!!!!!!!!####################       $ $$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                      !!!!!!!!!!!!!##################         $$$$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                    !!!! !!!!!!!!!!##################        $$$$$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                    !!!! !!!!!!!!!!#################         $$$$$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                  !!! !!!!!!!!!!!!!#################        $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                  !!!!!!!!!!!!!!!!!###############           $$$$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                !!!!!!!!!!!!!!!!!!!###############           $$$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!###############           $$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!###############           $$$$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!###############            $$$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!!#############             $$$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!!!############             $$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!!!############             $$$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "              !  ! !!!!!!!!!!!!!!!!!!############            $$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!##############            $$$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!!##############           $$$$$$$$$$$$$$$$$$$$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!!!!!!!!!!!!!!!!!!!################         $ $$$$$$$$$$$$$ $$$% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!!! !!!!!!!!!!!!!!!!################          $ $$$$$$$$$$$$      %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                !!!!!!!!!!!!!!!!!!!!#################   & &     $ $$$$$$ $         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                ! !!!!!!!!!!!!!!!!!!##################   &      $ $$$$                %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               ! !!!!!!!!!!!!!!!!!#####################           $                %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                 !!!!!!!!!!!!! !!!####################                          %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "               !!! !!!!!!!!!!! !!!############## #####                   '''    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                ! !!!!!!!!!!!! !!!###################                ''''''''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                  !!!!!!!!!!!! !!!###################              '''''''''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                !!!!!!!!!!!!    #!##################            '''''''''''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                !!!!!!!!!!!     ##################              '' ''''''''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                !!!!!!!!!!       ################                 '''''''''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                 !!!!!!!!       ################               '''' '''''''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                   !!!!!!        ###############               ''     '''''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                   !!!!           ##############               '      ''(''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                                  #############       #               ((((''''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                              )   ##############     #          (     (((((''''%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                             )    ##############    ##        (((     (((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                            ))     ############     ##        ((((    ((((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                          ))))     ############     #        ((((((  (((((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        )  )))      ########### #   #        ((((((((((((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        )) )))      ###########             ((((((((((((((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        ))))))       ###########            ((((((((((((((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        ))))))))     ######### #            (((****((((*(((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        )))))))     ##########              (************((((((((%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        )))))))   )) ####                   **************(((((+++%+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        ))))) )  ))) ####                   ***************((+++++++%++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        )))) )  )))) ####                    ***************++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        )))) )) ))))  #                      ***************++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                         ))) ))   )       )                  %**************+++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                         )))) )    )                         %%%%**********++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                         ,,,,   )))                --    %%%%%%%%*********++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                          ,,,     )   ,         -----     %%%%%%%*********+++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                         ,,,,,,     ,,,,       ------- ----%%%%%%-*******+++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                          ,,,,,,  ,,,,,,    -----------------------*****+*++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                        , ,,,,,  ,,,,,,,, -------------------------***+++++++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".                        ,,,,,,,,,,,,,,,  --------------------------+++++++++++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "                     ,,,,,,,,,,,,,,,,,,,,---------------------------+++++++++++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".                /// ,,,,,,,,,,,,,,,,,,,,---------------------------+++++++++++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".               /////,,,,,,,,,,,,,,,,,,,,---------------------------++++++++++++++++++++++%+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ". ..            /////,,,,,,,,,,,,,,,,,,,,----------------------------+++++++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".....         ///////,,,,,,,,,,,,,,,,,,,,,---------------------------+++++++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".....         //////,,,,,,,,,,,,,,,,,,,,,,-------------------------+++++++++++++++++++++++%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".....        ////////,,,,,,,,,,,,,,,,,,,,,------------------------+++++++++++++++++++++++++%%0000%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".....       ////////,,,,,,,,,,,,,,,,,,,,,,--------------------------++++++++++++++++++++000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "....        //////,,,,,,,,,,,,,,,,,,,,,,,,--------------------------++000000++++++++++++0000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "...         //////,,,,,,,,,,,,,,,,,,,,,,,,-------------------------+0000000000+++++0+++00000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "..        ///11///,,,,,,,,,,,,,,,,,,,,,,,,,-------------------------0000000000000000000+0000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        ".....   111111111/,,,,,,,,,,,,,,,,,,,,,,,,,-------------------------0000000000000000000000000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "...   22111111111/,,,,,,,,,,,,,,,,,,,,,,,3,3-------------------------00000000000000000000000000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "     2222211111111,,,,,,,,,,,,,,,,,,,,,,33333------------------------00000000000000000000000000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "     2222221111111,,,,,,,,,,,,,,,,,,,,333333333----------------------00000000000000000000000000000000%%%%%%%%%%%%%%%%%%%%%%%%%%%",
        "     2222222111111,,,,,,,,,,,,,,,,,,33333333333--3------------------000000000000000000000000000000000000%00%%%%%%%%%%%%%%%%%%%%%",
        "    22222222111114,,,,,,,,,,,,,,,,,3333333333333333----------------00000000000000000000000000000000000000000%0%%%%%%%%%%%%%%%%%%",
        "  22222222222211144,,,,,,,,,,,,,,,,,33333333333333333-------------000000000000000000000000000000000000000000000%%%%%%%%%%%%%%%%%",
        " 222222222222222144,,,,,,,,,,,,,,,,,333333333333333333-----------000000000000000000000000000000000000000000000000%0%%%%%%%%%%%%%",
        " 222222222222222222,,,,,,,,,,,,,,,,,,33333333333333335555-55555--00000000000000000000000000000000000000000000000000%%%%%%%%%%%%%",
        "2222222222222222222222,,,,,,,,,,,,,,,,33333333333333555555555555-0000000000000000000000000000000000000000000000000%%%%%%%%%%%%%%",
        "222222222222222222222222,,,,,,,,,,,,,,,333366333333555555555555500000000000000000000000000000000000000000000000000%%%%%%%%%%%%%%",
        "22222222222222222222222,,,,,,,,,,,,,,,,,3366666665555555555555550000000000000000000000000000000000000000000000000%%%%%%%%%%%%%%%",
        "22222222222222222222222,,,,,,,,,,,,,,,,666666666555555555557775500000000000000000000000000000000000000000000000000%%%%%%%%%%%%%%",
        "2222222222222222222222,,,,,,,,,,,,,,,66666666666655555557577777770000000000089990000000000000000000000000000000000%%%%%%%%%%%%%%",
        "2222222222222222222222,,,,,,,,,,,,,,,66666666666675555777777777777880000000888999990000000000000000000000000000000%%%%%%%%%%%%%%",
        "2222222222222222222222,,,,,,,,,,,,,,,66666666666677757777777777788888880888888999999000000000000000000000000000%%%%%%%%%%%%%%%%%",
        "2222222222222222222222::::::6,66,6666,66666666667777777777777778888888888888888999900000000000000000000000000%%%%%%%%%%%%%%%%%%%",
        "22222222222222222222::::::::6,6666666666666666677777777777777778888888888888888999999000000000000000000000000%%%%%%%%%%%%%%%%%%%",
        "22222222222222222222::::::::6666666666666666666777777777777777888888888888888888999990000000000000000000000     %%%%%%%%%%%%%%%%",
        "2222222222222222222:::::::::::;6;;;;6666666666<7777777777777778888888888888888888999990000000000000000000     %%%%%%%%%%%%%%%%%%",
        "222222222222222222:::::::::::;;;;;;;;;;6666<<<<77777777777777888888888888888888889999900    0000000000      %%%%%%%%%%%%%%%%%%%%",
        "22222222222222222222::::;::;;;;;;;;;;;;<<<<<<<===777777777777888888888888888888889900000   000000000         %%%%%%%%%%%%%%%%%%%",
        "22222222222222222222:::;;;;;;;;;;;;;;;;<<<<<<=====777777>>88888888888888888888889990000        00 00         %%%%%%%%%%%%%%%%%%%",
        "22222222222222222222;;;;;;;;;;;;;;;;;;;<<<<<<======77=>>>>>888888888888888888888890000          000         %%%%%%%%%%%%%%%%%%%%",
        "22222222222222222222;;;;;;;;;;;;;;;;;   <<<<==========>>>>>>8888888888888888888899000         000000       %%%%%%%%%%%%%%%%%%%%%",
        "222222222222222222222;;;;;;;;;;;;;;    ================>>>>>8888888888888888888880088         000000  000%  %%%%%%%%%%%%%%%%%%%%",
        "2222222222222222222;;;;;;;;;;;;;;;;;   ==  ==?=????=?==>>>>>>>88888888888888888888888           00000 00 %%%%%%%%%%%%%%%%%%%%%%%",
        "22222222222222222222;;;;;;;;;;;;;;;      = ==???????????>>>>>888888888888888888888888           0000       %%%%%%%%%%%%%%%%%%%%%",
        "22222222222222222222;;;;;;;;;;;;;;;      = ===?????????>>>>>>>>8>88888888888888888             000           %%%%%%%%%%%%%%%%%%%",
        "22222222222222222222;;;;;  ;;;;;;;;;       ====????????>>>>>>>>>>88888888888888888                            %%%%%%%%%%%%%%%%%%",
        "2222222222222222222222;;    ;;;;;;;;        ===?????????>>>>>>>>>@88888888888@8888                              %%%%%%%%%%%%%%%%",
        "2222222222222222222222;       ;;;;;;;;       ===????????>>>>>>>>@@88888888@@@@@@88                               %%%%%%%%%%%%%%%",
        "222222222222222222222         ;;;;;;;;;       ===???????>>>>>>>>@@@@@@@@@@@@@@@@@@                                %%%%%%%%%%%%%%",
        "22222222222     222           ;;;;;;;;;;       = =?????A>>>>>>>>>@@@@@@@@@@@@@@@                                   BBB%%%%%%%%%%",
        "222222222                     ;;;;;;;;;;      =   =???AAA>>>>>>>>>@@@@@@@@@@@@@@                                     BBBBBB%%%%%",
        "22C222222                      ;;;;;;;;;           ??AAAAA>>>>>>@@@@@@@@@@@@@@@@                                     BBBBBBBB%%%",
        "CCCCC2222                222    ;;;;;;;;;           =AAADD>>>>>>@@@@@@@@@@@@@@@                                        BBBBBBBBB",
        "CCCCCCCCCC               222      ;;;;;;;;            AADDD>>>>E@@@@@@@@@@@@@@@                                        BBBBBBBBB",
        "CCCCCCCCCC               22       ;;;;;;;;;            ADDD>EEEEE@@@@@@@@@@@@F@@                                       BBBBBBBBB",
        "CCCCCCCCC                22        ;;;;;;;;;;;;         DDDEEEEEEE@@@@@@@@@FFFFF             FFFFFFFF                  BBBBBBBBB",
        "CCCCCCC                   2         ;;;;;;;;;;          DDDEEEEEEE@@@G@@@@@GFFFFF          FFFFFFFFFFFF                BBBFBBBBB",
        "CCCCCC                                  ;;;;;;;         DDDEEEEEEGGGGGGGGGGFFFFFFFF       FFFFFFFFFFFFFFFF           FFFFFFBBBBB"
      ],
      "keys": [ [ "", "578", "752", "246", "643", "248", "233", "428", "208", "440", "112", "276", "616", "826", "528", "804", "56", "250",
                "203", "442", "703", "40", "348", "642", "498", "756", "380", "705", "191", "688", "70", "100", "499", "268", "724", "8",
                "807", "792", "300" ] ],
      "data": [ {
          "8": "Albania",
          "40": "Austria",
          "56": "Belgium",
          "70": "Bosnia and Herzegovina",
          "100": "Bulgaria",
          "112": "Belarus",
          "191": "Croatia",
          "203": "Czech Republic",
          "208": "Denmark",
          "233": "Estonia",
          "246": "Finland",
          "250": "France",
          "268": "Georgia",
          "276": "Germany",
          "300": "Greece",
          "348": "Hungary",
          "380": "Italy",
          "428": "Latvia",
          "440": "Lithuania",
          "442": "Luxembourg",
          "498": "Republic of Moldova",
          "499": "Montenegro",
          "528": "Netherlands",
          "578": "Norway",
          "616": "Poland",
          "642": "Romania",
          "643": "Russia",
          "688": "Serbia",
          "703": "Slovakia",
          "705": "Slovenia",
          "724": "Spain",
          "752": "Sweden",
          "756": "Switzerland",
          "792": "Turkey",
          "804": "Ukraine",
          "807": "The former Yugoslav Republic of Macedonia",
          "826": "United Kingdom"
      } ]
    }

When minified and gzipped, the resulting file is 2071 bytes with the key to data mapping and 1645 bytes without.

To test implementations, [`demo.json`](https://github.com/mapbox/mbtiles-spec/blob/master/1.1/demo.json) contains a grid that consists of 65501 different keys. This is the maximum possible in this version of UTFGrid. Implementors should check that obtaining a a coordinate should return the key `y * 256 + x` for all x/y, with the exception of y = 255 and x >= 222 and x <= 255 returning 65501 due to the maximum codepoint allowed in JSON.

A dummy code validation routine is given here:

```javascript
json = JSON.parse(/* demo.json */);
var key = 0;
for (var y = 0; y < 256; y++) {
    for (var x = 0; x < 256; x++) {
        var code = json.grid[y].charCodeAt(x);
        if (code >= 93) code--;
        if (code >= 35) code--;
        code -= 32;

        assert(code == key) {

        if (key < 65501) key++;
    }
}
```
